# github-readme-stats-cli

./: Cargo.toml  README.md
src/: main.rs
