[package]
name = "github-readme-stats-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
select = "0.6.0"
reqwest = { version = "0.11.12", features = ["blocking"] }
tokio = { version = "1.34.0", features = ["full"] }
